# officeQA-bench

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
.project_tmp/pytest_temp/pytest-of-Louay FG/: pytest-current
archive/manifests/: README.md
configs/pipeline1/: base.yaml  exp_faiss_bge_ollama.yaml
configs/pipeline1/examples/: local_ollama.yaml  (+1 more)
configs/pipeline2/: base_eval.yaml
data/: README.md
docs/: elasticsearch_backend.md
infra/docker/: .dockerignore  Dockerfile  docker-compose.yml  docker_host_ollama.yaml
scripts/: benchmark_pipeline1.py  compare_runs.py  diagnose_pipeline2_eval.py  inspect_raw_data.py  list_configs.py  run_config.py  smoke_elasticsearch_backend.py  test_ollama.py
src/pipeline1/: config_loader.py  main.py  metadata.py  orchestrator.py  preflight.py
src/pipeline2/: config_loader.py  main.py  orchestrator.py
tests/integration/: test_pipeline2_integration.py
tests/unit/: test_answer_metrics.py  test_config_loader.py  test_elasticsearch_smoke_script.py  test_metadata_aware_retrieval.py  test_ollama_base_url.py  test_pipeline1_events.py  test_pipeline1_generation_stage.py  test_pipeline1_manifest.py  test_pipeline1_retrieval_dedup.py  test_pipeline1_retrieval_elasticsearch.py  test_pipeline1_retrieval_hybrid.py  test_pipeline1_retrieval_stage.py  test_pipeline1_safety.py  test_pipeline1_stages.py  test_pipeline2_answer_metrics.py  test_pipeline2_eval_safety.py  test_pipeline2_orchestrator_metrics.py  test_pipeline2_retrieval_metrics.py  test_pipeline2_summary.py  test_retrieval_contracts.py
(+123 files in other folders)
