[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-benchmark"
version = "0.1.0"
description = "RAG execution and evaluation benchmark"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7.0",
  "pyyaml>=6.0.1",
  "jsonlines>=4.0.0",
  "sentence-transformers>=3.0.1",
  "faiss-cpu>=1.8.0",
  "numpy>=1.26.4",
  "pandas>=2.2.2",
  "tqdm>=4.66.0",
  "tiktoken>=0.7.0",
  "requests>=2.32.3",
  "pytest>=8.2.0",
]

[project.optional-dependencies]
ragas = [
  "ragas>=0.1.21,<0.2.0",
  "datasets>=2.19.0",
  "langchain-openai>=0.1.8",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
